# MyBank_ATM

./: .gitignore  README.md  SiFelipe_transactionhistory.txt  cust_profile.txt  pyproject.toml
app/: admin_interface.py  customer_interface.py
tests/: test_caixa_eletronico.py
